# Ferrite

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  flake.nix
.github/workflows/: nix.yml  release.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/06-async-foundation/: 06-async-foundation-VERIFICATION.md
.planning/phases/07-productivity-hub/: 07-01-PLAN.md  07-02-PLAN.md  07-03-PLAN.md  07-03-SUMMARY.md
assets/linux/: io.github.olapreis.Ferrite.metainfo.xml  io.github.olapreis.Ferrite.yml  io.github.olaproeis.Ferrite.metainfo.xml
docs/: adding-languages.md  ai-context.md  building.md  checklist-pr74.md  current-handover-prompt.md  i18n-audit-hardcoded.md  i18n-defined-keys.txt  i18n-orphaned-keys.md  i18n-sync-report.md  i18n-task-prompts.md  i18n-used-keys.txt  index.md  lsp-integration-plan.md  refactoring-assessment.md  v0.2.6-manual-test-suite.md
docs/ai-workflow/: README.md
docs/ai-workflow/prds/: prd-v0.2.6.1.md
docs/ai-workflow/tasks/: tasks-v0.2.6.1.json
docs/i18n/: weblate-pr90-review.md
docs/technical/editor/: architecture.md  bracket-matching.md  code-folding.md  edit-history.md  ferrite-editor.md  font-system.md  large-file-performance.md  line-cache.md  line-numbers.md  memory-optimization.md  multi-cursor.md  text-buffer.md  view-state.md  vim-mode.md  word-wrap.md
docs/technical/platform/: msi-installer-features.md  windows-borderless-window.md
docs/technical/ui/: about-help.md  keyboard-shortcuts.md  light-mode-strong-text-fix.md  nav-buttons.md  outline-panel.md  settings-panel.md  special-tabs.md
docs/technical/viewers/: csv-lazy-parsing.md
locales/: de.yaml  en.yaml  es.yaml  ja.yaml  nb_NO.yaml  pt.yaml  zh_Hans.yaml
src/: app.rs  fonts.rs  state.rs
src/app/: central_panel.rs  dialogs.rs  file_ops.rs  mod.rs  status_bar.rs  title_bar.rs
src/config/: persistence.rs  settings.rs  snippets.rs
src/editor/: find_replace.rs  mod.rs  widget.rs
src/editor/ferrite/: buffer.rs  cursor.rs  editor.rs  find_replace.rs  highlights.rs  history.rs  line_cache.rs  mod.rs  mouse.rs  search.rs  selection.rs  view.rs  vim.rs
src/editor/ferrite/input/: keyboard.rs  mod.rs  mouse.rs
src/editor/ferrite/rendering/: cursor.rs  gutter.rs  mod.rs  text.rs
src/files/: dialogs.rs
src/markdown/: csv_viewer.rs  editor.rs  mod.rs  tree_viewer.rs  widgets.rs
src/preview/: sync_scroll.rs
src/theme/: light.rs
src/ui/: about.rs  file_tree.rs  format_toolbar.rs  mod.rs  nav_buttons.rs  pipeline.rs  productivity_panel.rs  ribbon.rs  settings.rs  terminal_panel.rs  welcome.rs  window.rs
src/workers/: echo_worker.rs  mod.rs
src/workspaces/: file_tree.rs  mod.rs
test_md/: test_box_drawing.md
test_md/encoding_tests/: utf16be.txt  utf16le.txt
wix/: license.rtf  main.wxs
